cholera 0.4.9.9045
==================

- update walking neighborhood benchmark timings.


cholera 0.4.9.9044
==================

- update CRAN comments (win-builder).


cholera 0.4.9.9043
==================

- consolidate auditEdge().
- add print and plot methods for neighborhoodEuclidean().


cholera 0.4.9.9042
==================

- add "mileposts" to euclideanPath().


cholera 0.4.9.9041
==================

- starPlot() -> neighborhoodEuclidean().


cholera 0.4.9.9040
==================

- fix zero-length arrows for "mileposts" in addNeighborhood().


cholera 0.4.9.9039
==================

- fix time-based "mileposts" in plot.walking_path().


cholera 0.4.9.9038
==================

- plot.walking_path(): add "milepost" at destination.


cholera 0.4.9.9037
==================

- set default observations to 20K in simulateFatalities().
- re-order arguments in snowMap().


cholera 0.4.9.9036
==================

- implement negative selection in pumpCase.voronoi().
- add starPlot().
- remove starGraph() beta.


cholera 0.4.9.9035
==================

- add "euclidean.paths" (star graph) and "voronoi.cells" arguments to plot.voronoi().


cholera 0.4.9.9034
==================

- add starGraph() beta.


cholera 0.4.9.9033
==================

- add "unstacking.bars" lab notes.


cholera 0.4.9.9032
==================

- copyedit vignettes.


cholera 0.4.9.9031
==================

- copyedit function documentation.
- copyedit vignettes.


cholera 0.4.9.9030
==================

- fix for print.walking() w/ case.set = "expected".


cholera 0.4.9.9029
==================

- copy vignettes to docs folder.


cholera 0.4.9.9028
==================

- use 20K simulated observations.
- restore all vignettes.


cholera 0.4.9.9027
==================

- setup docs folder.


cholera 0.4.9.9026
==================

- use 40K simulated observations.
- remove ''"Unstacking" Bars' vignette.


cholera 0.4.9.9025
==================

- set "meter" as default in unitMeter().


cholera 0.4.9.9024