@@ -13,6 +13,7 @@
 #' @param radius Numeric. Controls the degree of zoom.
 #' @param unit.posts Character. "distance" for mileposts; "time" for timeposts.
 #' @param unit.interval Numeric. Sets interval between posts: for "distance", the default is 50 meters; for "time", the default is 60 seconds.
+#' @param alpha.level Numeric. Alpha level transparency for path: a value in [0, 1].
 #' @note The function uses a case's "address" (i.e., a stack's "anchor" case) to compute distance. Time is computed using cholera::distanceTime(). Adam and Eve Court, and Falconberg Court and Falconberg Mews, are disconnected from the larger road network; they form two isolated subgraphs. This has two consequences: first, only cases on Adam and Eve Court can reach pump 2 and those cases cannot reach any other pump; second, cases on Falconberg Court and Mews cannot reach any pump. Unreachable pumps will return distances of "Inf". Arrow points represent mileposts or timeposts to the destination.
 #' @return An R list with two elements: a character vector of path nodes and a data frame summary.
 #' @seealso \code{\link{fatalities}}, \code{vignette("pump.neighborhoods")}
@@ -21,7 +22,7 @@
 addPath <- function(origin, destination = NULL, type = "case-pump",
   observed = TRUE, weighted = TRUE, vestry = FALSE, unit = "meter",
   time.unit = "second", walking.speed = 5, zoom = TRUE, radius = 0.5,
-  unit.posts = "distance", unit.interval = NULL) {
+  unit.posts = "distance", unit.interval = NULL, alpha.level = 1) {
 
   arguments <- list(origin = origin,
                     destination = destination,
@@ -39,6 +40,10 @@ addPath <- function(origin, destination = NULL, type = "case-pump",
     txt1 <- paste("Case", x$origin, "is part of an isolated subgraph.")
     txt2 <- "It (technically) has no neareast pump."
     stop(paste(txt1, txt2))
+  }
+
+  if (isFALSE(alpha.level > 0 | alpha.level <= 1)) {
+    stop('"alpha.level" must be > 0 and <= 1')
   }
 
   colors <- cholera::snowColors(x$vestry)
@@ -125,6 +130,10 @@ addPath <- function(origin, destination = NULL, type = "case-pump",
         }
       }
     }
+  }
+
+  if (alpha.level != 1) {
+    case.color <- grDevices::adjustcolor(case.color, alpha.f = alpha.level)
   }
 
   drawPath(x$path, case.color)
